			   XPCE ChangeLog
			   ==============

* FIXED: Bug #14: printer handling for PceDraw (Lourens van der Meij).

* FIXED: Object-reference counting problem that may cause colour objects
  to be garbage collected early.  (Lourens van der Meij).

* ADDED: PceEmacs: provisional RDF, RDFS and OWL modes to insert the lengthy
  header and draw a tripple diagram from small files.

* PceEmacs: added .owl to map to xml-mode

VERSION 6.1.6, distributed with SWI-Prolog 5.1.6
================================================

* FIXED: `toc_node->font' from the library(pce_toc).  Filip Prochazka

* FIXED: Balloon help in modal windows.  After demo program from Juergen Repp.

* FIXED: Guitracer: goal-expansion loop.

* ENHANCED: image->draw_in to avoid redrawing the whole graphical if only
  part overlaps the image.
	
* ADDED: Support for writing PostScript colour images.

* ADDED: Windows version: load .ICO data from streams and therefore from
  SWI-Prolog resources.  With help from	Fabien Todescato.  Thanks.

* FIXED: Handling `default' argument in @finder<-get_file.
  (Lourens van der Meij).


VERSION 6.1.5, distributed with SWI-Prolog 5.1.5
================================================

* FIXED: `@pce->show-console' to deal with new SWI-Prolog console code.

* PORT: Upgraded XPCE configure suite to use autoconf 2.5.3 (distributed
  with SuSE 8.1).  Configure gives some warnings on cd to non-existent
  directories, but appears to work fine.

* FIXED: `date->set' (also `date->initialise' if arguments are provided)
  on Windows platforms. Fabien Todescato.

* FIXED: Added type-checking if an instance-variable is initialised to
  a constant (Lourens van der Meij).


VERSION 6.1.4, distributed with SWI-Prolog 5.1.4
================================================


VERSION 6.1.3, distributed with SWI-Prolog 5.1.3
================================================

* FIXED: `file<-read_line' to fail on end-of-file as advertised (but